name: abs2haskell-pure
version: 0.0.2
synopsis:
description:
author: Nikolaos Bezirgiannis, Enrique Martin, Frank de Boer
maintainer: Nikolaos Bezirgiannis <bezirgia@cwi.nl>
stability: provisional
build-type: Simple
cabal-version: >= 1.8

Source-repository this
  type:     git
  location: git://github.com/bezirg/abs2haskell-pure.git
  branch: master

library
  build-depends:      base,
                      transformers,
                      containers,
                      MissingH
  exposed-modules:
                      Base,
                      ABS                                                            