name: abs2haskell-pure
version: 0.0.9
synopsis: A "pure" implementation of an ABS-subset for analysis purposes
description: A "pure" implementation of an ABS-subset for analysis purposes
author: Nikolaos Bezirgiannis, Enrique Martin, Frank de Boer
maintainer: Nikolaos Bezirgiannis <bezirgia@cwi.nl>
stability: provisional
build-type: Simple
cabal-version: >= 1.8

Source-repository this
  type:     git
  location: git://github.com/bezirg/abs2haskell-pure.git
  branch: ast

library
  build-depends:      base,
                      containers,
                      vector
  exposed-modules:
                      -- the ABS' AST and the ABS-runtime data-structures
                      Base,
                      -- a single-step evaluator/interpreter of ABS terms (from AST)
                      Eval,
                      -- the global scheduler that schedules COGs (single-objects in our case)
                      -- simulates non-determinism by pseudo-randomness
                      Sched,
                      -- for debugging: Show-instances of heaps and processes 
                      PP,
                      -- a wrapper module that exposes all of the above modules
                      ABS
  hs-source-dirs:     src
  extensions:         LambdaCase
  ghc-options:        -Wall
                                                                                        